--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 16:05:22 2018</p>
+         Last Run: Tue Jul 10 17:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>58</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>23</td>
                         <td>WNW</td>
-                        <td>79</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,21 +48,21 @@
                         <td>13</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>NW</td>
-                        <td>67</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>13</td>
-                        <td>65</td>
+                        <td>3</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>21</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "23",
+                 "24",
                  "13",
-                 "13"
+                 "3"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "data":[
                  "58",
                  "62",
-                 "65"
+                 "64"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "67",
-                 "65"
+                 "86",
+                 "71",
+                 "54"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 16:05:22 2018</p>
+         Last Run: Tue Jul 10 17:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 16:05:22 2018</p>
+         Last Run: Tue Jul 10 17:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -686,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 16:05:22 2018</p>
+         Last Run: Tue Jul 10 17:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -711,7 +711,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSW</td>
@@ -720,8 +720,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>46</td>
                         <td>3</td>
@@ -735,7 +735,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>4</td>
                         <td>14</td>
                         <td>S</td>
@@ -749,7 +749,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>S</td>
                         <td>3</td>
                      </tr>
@@ -810,7 +810,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -823,7 +823,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -891,9 +891,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "54",
                  "46",
-                 "41",
+                 "40",
                  "35",
                  "33"
                ]
@@ -924,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 16:05:22 2018</p>
+         Last Run: Tue Jul 10 17:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -951,9 +951,9 @@
                         <td>0</td>
                         <td>26</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -961,11 +961,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -977,7 +977,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>16</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -1096,7 +1096,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "26",
-                 "30",
+                 "29",
                  "35"
                ]
              },
@@ -1105,9 +1105,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
                  "17",
-                 "16"
+                 "16",
+                 "14"
                ]
              }
            ]
