--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 18:05:03 2018</p>
+         Last Run: Tue Jul 10 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
-                        <td>Overcast</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>15</td>
-                        <td>51</td>
-                        <td>1</td>
-                        <td>21</td>
-                        <td>WNW</td>
-                        <td>84</td>
-                     </tr>
-                     <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>8</td>
-                        <td>55</td>
+                        <td>4</td>
+                        <td>54</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>16</td>
                         <td>NW</td>
-                        <td>70</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>3</td>
-                        <td>59</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>5</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>16</td>
                         <td>NW</td>
-                        <td>53</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -106,9 +93,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
                  "19",
-                 "18"
+                 "19"
                ]
              },
              {
@@ -117,9 +103,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
                  "19",
-                 "18"
+                 "19"
                ]
              }
            ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -170,9 +154,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "8",
-                 "3"
+                 "4",
+                 "5"
                ]
              },
              {
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "55",
-                 "59"
+                 "54",
+                 "56"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "70",
-                 "53"
+                 "59",
+                 "45"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 18:05:03 2018</p>
+         Last Run: Tue Jul 10 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -243,7 +224,7 @@
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
@@ -251,7 +232,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -261,7 +242,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
                         <td>51</td>
                      </tr>
@@ -271,11 +252,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -283,7 +264,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -418,8 +399,8 @@
                  "32",
                  "30",
                  "30",
-                 "34",
-                 "42"
+                 "33",
+                 "41"
                ]
              },
              {
@@ -428,9 +409,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "24",
-                 "29",
+                 "30",
                  "51",
-                 "32",
+                 "31",
                  "20"
                ]
              }
@@ -448,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 18:05:03 2018</p>
+         Last Run: Tue Jul 10 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -686,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 18:05:03 2018</p>
+         Last Run: Tue Jul 10 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -711,7 +692,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSW</td>
@@ -747,7 +728,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>13</td>
                         <td>S</td>
@@ -891,10 +872,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "46",
                  "41",
-                 "35",
+                 "36",
                  "33"
                ]
              },
@@ -924,7 +905,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 18:05:03 2018</p>
+         Last Run: Tue Jul 10 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -951,7 +932,7 @@
                         <td>0</td>
                         <td>26</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>17</td>
                      </tr>
