--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 21:05:26 2018</p>
+         Last Run: Tue Jul 10 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,11 +38,11 @@
                         <td>4</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>24</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
@@ -50,7 +50,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>30</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -70,7 +70,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -82,7 +82,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -217,8 +217,8 @@
                  "32",
                  "30",
                  "30",
-                 "33",
-                 "41"
+                 "32",
+                 "40"
                ]
              },
              {
@@ -226,8 +226,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "30",
+                 "21",
+                 "26",
                  "51",
                  "32",
                  "20"
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 21:05:26 2018</p>
+         Last Run: Tue Jul 10 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 21:05:26 2018</p>
+         Last Run: Tue Jul 10 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SW</td>
@@ -519,8 +519,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
                         <td>45</td>
                         <td>3</td>
@@ -560,7 +560,7 @@
                         <td>0</td>
                         <td>33</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSW</td>
                         <td>5</td>
                      </tr>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -690,7 +690,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "45",
                  "40",
                  "35",
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 21:05:26 2018</p>
+         Last Run: Tue Jul 10 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
